--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/vitedjs/template-react-icon.git"
   },
-  "funding": "https://github.com/sponsors/vitedjs",
+  "funding": "https://github.com/sponsors/guoyunhe",
   "license": "MIT",
   "author": {
     "name": "Guo Yunhe",
